[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adv_ml_tut1"
version = "0.0.1"
description = "tut 1"
authors = [
  { name = "Isanka D" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["adv_ml_tut1"]
include = ["pyproject.toml", "adv_ml_tut1/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["adv_ml_tut1"]
force-sort-within-sections = true

